# NOW

./: .gitignore  LICENSE  NOW_GUI.fig  NOW_GUI.m  NOW_MULTIRUN.m  NOW_RUN.m  README.md  constraints.py  generate_test_fixtures.m  implementation_plan.md  now_cross_term_sensitivity.m  now_example.py  now_gamma.m  now_gwf_to_q.m  now_maxwell_coeff.m  now_plot_all.m  now_print_requested_and_real_times.m  now_problem_to_name.m  now_write_wf.m  optimizationProblem.m  optimizationProblem.py  optimize.py  progress.md  pyproject.toml  scripted_NOW_Example.m
crossval/: README.md  compare_results.py  export_matlab.m  export_python.py
now/: __init__.py  config.py  constants.py  optimize.py  problem.py  result.py  utils.py  visualization.py
now/constraints/: __init__.py  linear.py  nonlinear.py
now/io/: __init__.py  config_io.py  problem_io.py
now_python/: now_example.py  optimizationProblem.py
private/: createConstraintGradientFunction.m  getActualTimings.m  getNonLinearConstraintsFileName.m  nonlcon100points2Norm.m  nonlcon100pointsMaxNorm.m  nonlcon150points2Norm.m  nonlcon150pointsMaxNorm.m  nonlcon200points2Norm.m  nonlcon200pointsMaxNorm.m  nonlcon25points2Norm.m  nonlcon25pointsMaxNorm.m  nonlcon50points2Norm.m  nonlcon50pointsMaxNorm.m  nonlcon77points2Norm.m  nonlcon77pointsMaxNorm.m  nonlconAnalytic.m  objFun.m  optimize.m
python/: now.py
tests/: conftest.py  helpers.py  test_config.py  test_io.py  test_linear_constraints.py  test_nonlinear_constraints.py  test_objective.py  test_optimize.py  test_problem.py  test_solvers.py  test_utils.py
(+21 files in other folders)
