[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "now"
version = "2.0.0"
description = "Numerical Optimization of gradient Waveforms for diffusion MRI"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
    "jax[cpu]>=0.4",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
